assets/css/style.css
/*-----------------------------General Classes---*/

.bg-color {
    background-color: #b10303;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-headers {
    font-size: 50px;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    color: #b10303;
    letter-spacing: 4px;
    text-transform: uppercase;
    text-align:-webkit-center;
    padding: 50px;
}

@media (max-width:576px) {
    .main-headers {
        font-size: 20px;
        padding: 30px;
    }
}

/*-----------------------------Header---*/

header {
    margin: 0;
    border: solid;
    border-color: #b10303;
}

.logo {
    max-width: 100%;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items:center;
}

.logo img {
    max-width: 100%;
    height: auto;
}

.tel_no {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: fit-content;
    text-transform: uppercase;
    margin-top: 20px;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    color: #faf6f6ce;
}

.tel_no a {
    margin: 4px;
    color: #faf6f6ce;
}

.tel_no a:hover {
    color: #c5b720;
}

.navbar-style {
    max-width: 100%;
}

.navbar-style a {
     color: #faf6f6ce;
}

.nav-item {
    height: 70px;
}

.nav-item:hover {
    background-color: rgba(255,0,0,0.2);
}

.nav-link {
    width: 100%;
    height: 70px;
}
 
@media(max-width:568px) {
    #Dbrochure {
        display: none;
    }
}

.nav-link:hover {
    color: #c5b720;
}

.active  {
    background-color: rgba(255,0,0,0.4);
}


/*-----------------------------Footer---*/

.footer-common {
    height: 120px;
    color: #faf6f6ce;
    font-size: 26px;
    font-family: Arial, Helvetica, sans-serif;
    letter-spacing: 2px;
}

.footer-common p a {
    color: #faf6f6ce;
}

.footer-common i {
    color: #faf6f6ce;
    font-size: 26px;
    padding: 4px;
}

.footer-common p a:hover {
    color:#c5b720;
}

.footer-common i:hover {
    color: #c5b720;
}

@media (max-width:768px) {

    .md-footer-d {
        display: flex;
        align-items: center;
        justify-content: center;
        padding-top: 30px;
    }
}


/*-----------------------------HomePAge Slider/ Code obtained from bootstrap and edited---*/

.carousel-item img {
    max-width:1200px;
    max-height:600px;
    margin: auto;
    
}

/*-----------------------------HomePage-Testimonials---*/

.testimonials {
    width: 100%;
    height: 100%;
}

.review {
    background-color: rgba(255,0,0,0.2);
    width: 90%;
    height: 90%;
    border: solid;
    border-radius: 10%;
    border-color: #b10303;
    margin: 20px;
    overflow: hidden;
}

.review p {
    text-align:center;
    text-transform:uppercase;
    padding-top: 20px;
}





/*-----------------------------HomePage-Why-book-with-us---*/

.why-book-with-us {
    width: 100%;
}

.valueitem {
    text-align: center;
    text-transform: uppercase;
    padding: 20px;
    font-size: 24px;
    font-family: Arial, Helvetica, sans-serif;
}

.valueitem i {
    display: block;
    padding: 10px;
    font-size:50px;
    color:#c5b720;
}

/*-----------------------------Destinations Page---*/

.section-container {
    width: 100%;
    height: 100%;
}

.deal-type-container {
    position: relative;
    width: 100%;
    height: 400px;
}

.deal-type-container img {
    position: absolute;
    padding: 20px;
    width: 80%;
    height: 80%;
    overflow: hidden;
}

.type-caption {
    position: absolute;
    font-size: 26px;
    color: #faf6f6ce;
}

.btn-see-deals {
    position: absolute;   
    width: 50%;
    height: 10%;
    color:#faf6f6ce;
    text-align: center;
    background-color:#b10303;
    font-size: 18px;
    border-radius: 20%;
    bottom: 20%;
    right: 20%;
    padding-top: 5px;
}

.btn-see-deals:hover {
    color: #c5b720;
}

.multi-type-container {
    padding: 20px;
}

.multi-type-container img {
    width: 300px;
    height: 300px;
    padding:20px;
    border-radius: 50%;
    background-color: #b10303;
    
}

@media (min-width: 1250px) {
    .multi-type-container img {
        width: 400px;
        height: 400px;
        padding:20px;
        border-radius: 50%;
        background-color: #b10303;
        
    }
}

/*-----------------------------Destinations Page/ Flip Card, Code obtained https://www.w3schools.com/howto/howto_css_flip_card.asp, editted to suit my website needs---*/


.flip-card {
    background-color: transparent;
    width: 300px;
    height: 300px;
    perspective: 1000px; 
  }
  
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
  }
  
  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }
  
  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
  }
  
  .flip-card-front {
    background-color: #bbb;
    color: black;
    border-radius: 50%;
  }
  
  .flip-card-back {
    background-color: #c5b720;
    color: #faf6f6ce;
    transform: rotateY(180deg);
    border-radius: 50%;
    padding-top: 25%;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
  }

  @media (min-width: 1250px) {
    .flip-card {
        background-color: transparent;
        width: 400px;
        height: 400px;
        perspective: 1000px; 
    }

      .flip-card-back {
        background-color: #c5b720;
        color: #faf6f6ce;
        transform: rotateY(180deg);
        border-radius: 50%;
        padding-top: 30%;
    }

  }

  /*-----------------------------Enquiry Page---*/

  .form-container {
    background: url("../images/barbados.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    width:100%;
    height:100%;
    padding:50px;
  }

    .enquiry-form {
        position:relative;
        width: 80%;
        height: auto;
        padding: 20px;
        color: #faf6f6ce;
        text-align: center;
        border:solid;
        border-color: #b10303;
        border-radius: 10%;
        background-color: rgba(255,0,0,0.4);
        font-family: 'Open Sans', sans-serif;
    }

    @media (max-width: 576px) {
        .enquiry-form {
            width: 90%;
        }
    }

    @media (max-width: 400px) {
        .enquiry-form {
            width: 100%;
        }
    }

    label {
        width:80%;
    }

    input {
        width: 80%;
    }

    #holiday-type,#deal {
        width: 80%;
    }

    #textarea {
        width:80%;
    }

    .btn-enquiry {
        width: 40%;
        height: 50px;
        color:#faf6f6ce;
        background-color:#b10303;
        font-size: 18px;
        border-radius: 20%;
        bottom: 50px;
        right: 140px;
    
    }

    @media (max-width:600px) {
        .btn-enquiry {
            width: 160px;
        }
    }

    .btn-enquiry:hover {
        color: #c5b720;
    }

    .contact-info {
        color: #faf6f6ce;
        letter-spacing: 2px;
        padding-top: 50%;
    }

    .contact-info h2 {
        padding-bottom: 20px;
    }

    /*-----------------------------Landing Page---*/

    .landing-page {
        background: url("../images/background2.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
        height: 80vh;
        padding-top: 20px;
    }

    .thankyou-container {
        position: relative;
        border: solid;
        border-color:#b10303;
        border-radius: 80%;
        background-color:rgba(255,0,0,0.4);
        width: 90%;
        height: 70vh;
        align-content:center;
        margin: auto;
    }

    .message-container {
        color: #faf6f6ce;
        font-size:20px;
        font-weight: bold;
        font-family: Arial, Helvetica, sans-serif;
        text-align:center;
    
    }

    .message-container h2 {
        font-size: 40px;
        font-weight: bold;
        font-family: Arial, Helvetica, sans-serif;
    }

